compiler/compiler/tests/language/negative/oopSurfaceRoleCapability/associated/publicAssociatedTypeLeak.qn
private SecretBody {
  value: string = ""
}

extend HttpCtx<...Caps> : pub HttpAssociatedSpec<HttpCtx<...Caps>> {
  type Body = SecretBody
  type Error = IntoHttpError
  const requiresAuth: bool = true
}
